<resources>
    <string name="app_name">weather_app</string>
    <string name="weather_update">Choose city from a list or search for one:</string>
    <string name="enter_country_code_optional">Enter Country Code (optional)</string>
    <string name="enter_city_name">Enter City Name</string>
    <string name="get">Get weather in Rostov</string>
    <string name="get_2">Get weather in Moscow</string>
    <string name="back_to_cites">Cities list</string>
    <string name="refresh">Refresh weather</string>
    <string name="type_city_name">Type city name</string>
    <string name="search">Search</string>
    <string name="rostov_on_don">Rostov-on-Don</string>
    <string name="moscow">Moscow</string>
    <string name="hourly">Hourly</string>
    <string name="daily">Daily</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="conditions">Conditions</string>
    <string name="air_pressure">Air pressure</string>
    <string name="city_search_hint"><font size="15">Type city name</font></string>

</resources>